--- a/index.html
+++ b/index.html
@@ -193,5 +193,43 @@
         </div>
         <div class='blue-fill'></div>
         <div class='bg-image' style='background-image: url(./images/rit.jpg)'></div>
+        <footer class="page-footer" style="background-color: #f58625;margin-top:0px;">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">About</h5>
+                <p class="grey-text text-lighten-4">
+                    This site was created in an effort to make the information provided by
+                     RIT's Career Services easier to visualize. A limited dataset of only 
+                     Golisano Co-op information was given to us as a test but we hope to 
+                     encompass more information from other colleges in the future. 
+                </p>
+              </div>
+              <div class="col l4 offset-l2 s12">
+                  <h5 class="white-text">References</h5>
+                <p>
+                    We used the D3.js library for help with the visualization and we used
+                    Materialize for styling. The logo was made with Logomakr. 
+                </p>
+                <br>
+                <p>
+                    If you have any questions or ideas for improvement, please let us know
+                    at TigerCharts@mail.rit.edu                       
+                </p>
+              </div>
+            </div>
+            <div class="links">                
+                <a class="grey-text text-lighten-3" target="_blank" href="https://www.rit.edu/emcs/oce/">Career Services</a>
+                <a class="grey-text text-lighten-3" target="_blank" href="https://d3js.org/">D3.js</a>
+                <a class="grey-text text-lighten-3" target="_blank" href="http://materializecss.com/">Materialize</a>
+                <a class="grey-text text-lighten-3" target="_blank" href="https://logomakr.com/">Logomakr</a>
+            </div>
+          </div>
+          <div class="footer-copyright">
+            <div class="container center-align">
+                © 2016 Copyright Ryan Bell - Dan Fisher - Will Frey
+            </div>
+          </div>
+        </footer>
     </body>
 </html>
